--- a/css/style.css
+++ b/css/style.css
@@ -445,10 +445,19 @@ header {
 }
 
 .portfolio-item-img{
-    display : block;
+    display : flex;
+    position: relative;
     margin: auto;
-    max-width: 600px;
     justify-content: center;
+}
+@media (min-width: 800px) {
+    .portfolio-item-img {
+        display: flex;
+        max-width: 500px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
 }
 
 
